[gd_scene load_steps=20 format=3 uid="uid://gx585ggn6tux"]

[ext_resource type="Script" path="res://score.gd" id="1_3aegd"]
[ext_resource type="Texture2D" uid="uid://b25jd7dpvbat7" path="res://Art/Maki1.png" id="2_3ub8w"]
[ext_resource type="Texture2D" uid="uid://bqdo1bxm8brf6" path="res://Art/Maki2.png" id="3_wplas"]
[ext_resource type="Texture2D" uid="uid://726rh2id77ft" path="res://Art/Tempura.png" id="4_xjlny"]
[ext_resource type="Texture2D" uid="uid://bqm6472xf70rj" path="res://Art/Sashimi.png" id="5_g5h4g"]
[ext_resource type="Texture2D" uid="uid://bbositavfbep0" path="res://Art/Dumpling.png" id="6_82mvt"]
[ext_resource type="Texture2D" uid="uid://dkk3lsbqofcft" path="res://Art/Squid.png" id="7_wu68o"]
[ext_resource type="Texture2D" uid="uid://cju6gj0511qd8" path="res://Art/Salmon.png" id="8_kp0hs"]
[ext_resource type="Texture2D" uid="uid://dgwd076aodtwu" path="res://Art/Egg.png" id="9_t1kvj"]
[ext_resource type="Texture2D" uid="uid://dvf1ifhbr8ife" path="res://Art/Pudding.png" id="10_dlxvm"]
[ext_resource type="Texture2D" uid="uid://d2ppgspwkh273" path="res://Art/Home.png" id="12_4xv4f"]
[ext_resource type="Texture2D" uid="uid://chijupvhdl0cu" path="res://Art/Add.png" id="12_rws48"]
[ext_resource type="Texture2D" uid="uid://bbjbfbraxpr1j" path="res://Art/Confirm.png" id="13_eqgad"]
[ext_resource type="Texture2D" uid="uid://b5curcr3cls5b" path="res://Art/Minus.png" id="14_6udbr"]
[ext_resource type="Texture2D" uid="uid://b3nqbo4j8nrcm" path="res://Art/WasabiOff.png" id="14_20q1e"]
[ext_resource type="Texture2D" uid="uid://pkcjirijh627" path="res://Art/EmptyStar.png" id="15_02wsy"]
[ext_resource type="Texture2D" uid="uid://cvebe32tx1ybh" path="res://Art/FilledStar.png" id="16_op4sf"]
[ext_resource type="Texture2D" uid="uid://17fjk38hslrt" path="res://Art/GreyedStar.png" id="17_2elu6"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j63lq"]

[node name="Score" type="Node2D"]
script = ExtResource("1_3aegd")

[node name="Round" type="Label" parent="."]
offset_right = 82.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.686275, 0.670588, 0.670588, 1)
theme_override_font_sizes/font_size = 25
text = "1/3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Maki1" type="TextureButton" parent="."]
z_index = 1
offset_left = 8.0
offset_top = 38.0
offset_right = 473.0
offset_bottom = 516.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("2_3ub8w")

[node name="Maki2" type="TextureButton" parent="."]
z_index = 1
offset_left = 8.0
offset_top = 112.0
offset_right = 494.0
offset_bottom = 619.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("3_wplas")

[node name="Tempura" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 220.0
offset_right = 371.0
offset_bottom = 583.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_xjlny")

[node name="Sashimi" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 300.0
offset_right = 371.0
offset_bottom = 663.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("5_g5h4g")

[node name="Dumpling" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 380.0
offset_right = 371.0
offset_bottom = 743.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("6_82mvt")

[node name="Squid" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 460.0
offset_right = 372.0
offset_bottom = 824.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_wu68o")

[node name="Salmon" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 540.0
offset_right = 371.0
offset_bottom = 903.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_kp0hs")

[node name="Egg" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 620.0
offset_right = 371.0
offset_bottom = 983.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("9_t1kvj")

[node name="Pudding" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 780.0
offset_right = 372.0
offset_bottom = 1143.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("10_dlxvm")

[node name="Home" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 16.0
offset_right = 781.0
offset_bottom = 387.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("12_4xv4f")
metadata/_edit_use_anchors_ = true

[node name="Confirm" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 80.0
offset_right = 781.0
offset_bottom = 451.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("13_eqgad")
metadata/_edit_use_anchors_ = true

[node name="Add" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 144.0
offset_right = 781.0
offset_bottom = 515.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("12_rws48")
texture_disabled = SubResource("PlaceholderTexture2D_j63lq")
metadata/_edit_use_anchors_ = true

[node name="Delete" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 208.0
offset_right = 782.0
offset_bottom = 578.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("14_6udbr")

[node name="Favourite" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 272.0
offset_right = 782.0
offset_bottom = 643.0
scale = Vector2(0.15, 0.15)
toggle_mode = true
texture_normal = ExtResource("15_02wsy")
texture_pressed = ExtResource("16_op4sf")
texture_disabled = ExtResource("17_2elu6")

[node name="Wasabi" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 336.0
offset_right = 782.0
offset_bottom = 707.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("14_20q1e")
metadata/_edit_use_anchors_ = true

[node name="Players" type="ScrollContainer" parent="."]
offset_left = 82.0
offset_right = 406.0
offset_bottom = 896.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="PlayersArea" type="HBoxContainer" parent="Players"]
layout_mode = 2

[node name="PlayersArea2" type="Area2D" parent="Players/PlayersArea"]

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Wasabi" to="." method="_on_wasabi_pressed"]
